--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.0",
+    "@apollo/react-hooks": "^4.0.0",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
@@ -19,6 +21,7 @@
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "graphql": "^16.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
