--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "isolatedModules": true,
     "jsx": "react-native",
     "lib": [
-      "es2017"
+      "es2017",
+      "DOM"
     ],
     "moduleResolution": "node",
     "noEmit": true,
