--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.64.3",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.5"
   },
@@ -34,6 +35,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
   },
   "private": true
