--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "typeRoots" : ["node_modules/@types", "src/types/images.d.ts"]
+
   },
   "exclude": [
     "node_modules",
