--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
+    "@types/react-native-modal": "^4.1.1",
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~44.0.0",
@@ -27,6 +28,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-modal": "^13.0.1",
     "react-native-picker-module": "^2.0.4",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.2.4",
