--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.6.0",
     "@apollo/react-hooks": "^4.0.0",
     "@expo/vector-icons": "^13.0.0",
+    "@fontsource/source-sans-pro": "^4.5.9",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
