--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,21 +5,18 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react-native",
-    "lib": [
-      "es2017",
-      "DOM"
-    ],
+    "lib": ["es2017", "DOM"],
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
     "target": "esnext",
-    "typeRoots" : ["node_modules/@types", "src/types/images.d.ts"]
-
+    "typeRoots": ["node_modules/@types", "src/types/images.d.ts"]
   },
   "exclude": [
     "node_modules",
     "babel.config.js",
-    "jest.config.js"
+    "jest.config.js",
+    "metro.config.js"
   ],
   "extends": "expo/tsconfig.base"
 }
