--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@apollo/client": "^3.6.0",
     "@apollo/react-hooks": "^4.0.0",
     "@expo-google-fonts/source-sans-pro": "^0.2.2",
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^12.0.0",
     "@fontsource/source-sans-pro": "^4.5.9",
-    "@react-native-async-storage/async-storage": "^1.17.3",
-    "@react-native-picker/picker": "^2.4.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -25,7 +25,7 @@
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~44.0.0",
-    "expo-font": "^10.2.1",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.4.0",
     "react": "17.0.1",
@@ -33,14 +33,14 @@
     "react-native": "0.64.3",
     "react-native-flash-message": "^0.3.1",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-maps": "^1.3.2",
+    "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-picker-module": "^2.0.4",
     "react-native-picker-select": "^8.0.4",
-    "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1",
-    "react-native-svg": "^13.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
