--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "preinstall": "npx npm-force-resolutions"
   },
   "dependencies": {
     "@apollo/client": "^3.6.0",
@@ -52,6 +53,9 @@
     "@types/react-native": "~0.64.12",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "~17.0.21"
   },
   "private": true
 }
