--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "preinstall": "npx npm-force-resolutions"
+    "eject": "expo eject"
   },
   "dependencies": {
     "@apollo/client": "^3.6.0",
@@ -27,6 +26,7 @@
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "^13.3.1",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.4.0",
     "react": "17.0.1",
@@ -34,6 +34,7 @@
     "react-native": "0.64.3",
     "react-native-flash-message": "^0.3.1",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-image-picker": "^4.10.0",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
@@ -53,9 +54,6 @@
     "@types/react-native": "~0.64.12",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
-  },
-  "resolutions": {
-    "@types/react": "~17.0.21"
   },
   "private": true
 }
