--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@fontsource/source-sans-pro": "^4.5.9",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/geolocation": "^3.0.1",
     "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
@@ -27,6 +28,7 @@
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
     "expo-image-picker": "^13.3.1",
+    "expo-location": "^14.3.0",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.4.0",
     "react": "17.0.1",
@@ -34,6 +36,7 @@
     "react-native": "0.64.3",
     "react-native-flash-message": "^0.3.1",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-picker": "^4.10.0",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.9.0",
